<resources>
    <string name="app_name">kotlin-signup</string>

    <string name="signup_title">회원가입</string>
    <string name="signup_id">아이디</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_confirm_password">비밀번호 재확인</string>
    <string name="signup_name">이름</string>
    <string name="signup_id_hint">영문 소문자, 숫자, 특수기호(_,-) 5~20자</string>
    <string name="signup_password_hint">영문 대/소문자, 숫자, 특수문자(!@#$%) 8자 ~16자</string>
    <string name="next">다음</string>


    <string name="id_formatting_message">5~20자의 영문 소문자, 숫자와 특수기호(_)(-) 만 사용 가능합니다.</string>
    <string name="id_success_message">사용 가능한 아이디입니다.</string>

    <string name="password_length_message">8자 이상 16자 이하로 입력해주세요.</string>
    <string name="password_uppercase_message">영문 대문자를 최소 1자 이상 포함해주세요.</string>
    <string name="password_number_message">숫자를 최소 1자 이상 포함해주세요.</string>
    <string name="password_special_message">특수문자를 최소 1자 이상 포함해주세요.</string>
    <string name="password_success_message">안전한 비밀번호입니다.</string>

    <string name="confirm_password_success_message">비밀번호가 일치합니다.</string>
    <string name="confirm_password_fail_message">비밀번호가 일치하지 않습니다</string>

    <string name="name_fail_message">이름을 일치하지 않습니다.</string>
    <string name="name_success_message">이름이 일치합니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>