<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.kotlinsignup.ui.signup.SignupViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="40dp"
        android:paddingTop="40dp"
        android:paddingEnd="40dp"
        tools:context=".ui.signup.SignupFragment">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup" />

        <EditText
            android:id="@+id/edittext_id"
            textChangedListener="@{viewmodel.idWatcher}"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_textview"
            android:hint="@string/signup_id_hint"
            android:inputType="text"
            android:padding="8dp"
            android:text="@={viewmodel.id}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id" />

        <TextView
            android:id="@+id/tv_id_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/edittext_id"
            app:layout_constraintTop_toBottomOf="@id/edittext_id" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_id" />

        <EditText
            android:id="@+id/edittext_password"
            textChangedListener="@{viewmodel.passwordWatcher}"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_textview"
            android:hint="@string/signup_password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:text="@={viewmodel.password}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password" />

        <TextView
            android:id="@+id/tv_password_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/edittext_password"
            app:layout_constraintTop_toBottomOf="@id/edittext_password" />

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintBottom_toBottomOf="@id/edittext_password"
            app:layout_constraintEnd_toEndOf="@id/edittext_password"
            app:layout_constraintTop_toTopOf="@id/edittext_password" />

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_password" />

        <EditText
            android:id="@+id/edittext_confirm_password"
            textChangedListener="@{viewmodel.confirmWatcher}"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_textview"
            android:inputType="textPassword"
            android:padding="8dp"
            android:text="@={viewmodel.confirmPassword}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_confirm_password" />

        <TextView
            android:id="@+id/tv_confirm_password_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/edittext_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/edittext_confirm_password" />

        <ImageView
            android:id="@+id/iv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintBottom_toBottomOf="@id/edittext_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/edittext_confirm_password"
            app:layout_constraintTop_toTopOf="@id/edittext_confirm_password" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_confirm_password" />

        <EditText
            android:id="@+id/edittext_name"
            textChangedListener="@{viewmodel.nameWatcher}"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_textview"
            android:inputType="text"
            android:padding="8dp"
            android:text="@={viewmodel.name}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_name_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@id/edittext_name"
            app:layout_constraintTop_toBottomOf="@id/edittext_name" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_button"
            android:drawableStart="@drawable/ic_baseline_arrow_circle_right_24"
            android:enabled="@{viewmodel.isEnable()}"
            android:gravity="center"
            android:onClick="@{()->viewmodel.onClickEvent(viewmodel.id, viewmodel.password, viewmodel.name)}"
            android:paddingStart="10dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@id/edittext_name"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@id/edittext_name"
            app:layout_constraintTop_toBottomOf="@id/edittext_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>